# cpp-d04

./: .gitignore  CMakeLists.txt
ex00/: Makefile
ex00/includes/: Animal.hpp  Cat.hpp  WrongAnimal.hpp  WrongCat.hpp
ex00/srcs/: Animal.cpp  Cat.cpp  Dog.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
ex01/: Makefile
ex01/includes/: Animal.hpp  Cat.hpp  Dog.hpp
ex01/srcs/: Animal.cpp  Cat.cpp  Dog.cpp  main.cpp
ex02/includes/: AAnimal.hpp  Animal.hpp  Brain.hpp  Cat.hpp  Dog.hpp
ex02/srcs/: AAnimal.cpp  Animal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  main.cpp
